# LxRunOffline

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  LICENSE-3RD-PARTY  LxRunOffline.sln  LxRunOfflineRedirect.sln  Makefile  README.md  appveyor.yml  paket.dependencies
.github/workflows/: build.yml
LxRunHook/: HookEntryPoint.cs  LxRunHook.csproj
LxRunHook/Properties/: AssemblyInfo.cs
LxRunOffline/: App.config  AssemblyInfo.cs  FileSystem.cs  Filesystem.cs  LxRunOffline.csproj  LxRunOffline.vcxproj  LxRunOffline.vcxproj.filters  PInvoke.cs  Program.cs  Utils.cs  Wsl.cs  WslWinApi.cs  app.manifest  error.cpp  error.h  fs.cpp  fs.h  main.cpp  manifest.rc  ntdll.h  packages.config  paket.references  path.cpp  path.h  reg.cpp  reg.h  resources.rc  shortcut.cpp  shortcut.h  stdafx.cpp  stdafx.h  utils.cpp  utils.h
LxRunOffline/Properties/: AssemblyInfo.cs
LxRunOfflineRedirect/: DownloadController.cs  LxRunOfflineRedirect.csproj  Program.cs  Startup.cs
LxRunOfflineRedirect/Properties/: launchSettings.json
LxssEa/: LxssEa.cpp  LxssEa.vcxproj  LxssEa.vcxproj.filters
LxssFileSystem/: LxssFileSystem.cpp  LxssFileSystem.vcxproj  LxssFileSystem.vcxproj.filters
choco/: CMakeLists.txt  lxrunoffline.nuspec  lxrunoffline.nuspec.in
choco/tools/: chocolateyInstall.ps1  chocolateyUninstall.ps1
misc/: remove-slash-conversion.patch  vcpkg-libarchive-slash.patch  vcpkg-libarchive-static.patch
src/: CMakeLists.txt  error.cpp  error.h  fs.cpp  fs.h  main.cpp  path.cpp  path.h  reg.cpp  reg.h  shortcut.cpp  shortcut.h  stdafx.h  utils.cpp  utils.h
src/LxRunOffline/: CMakeLists.txt  config.h.in  main.cpp
src/LxRunOffline/res/: resources.rc
src/LxRunOfflineShellExt/: CMakeLists.txt  ContextMenuHandler.cpp  ContextMenuHandler.h  LxRunOfflineShellExt.def  LxRunOfflineShellExt.idl  config.h.in  dllmain.cpp  dllmain.h  pch.h
src/LxRunOfflineShellExt/res/: ContextMenuHandler.rgs  ContextMenuHandler.rgs.in  LxRunOfflineShellExt.rgs  resources.h  resources.rc
src/lib/: CMakeLists.txt  error.cpp  error.h  fs.cpp  fs.h  ntdll.h  path.cpp  path.h  pch.h  reg.cpp  reg.h  shortcut.cpp  shortcut.h  stdafx.h  utils.cpp  utils.h
src/lib/include/LxRunOffline/: error.h  fs.h  ntdll.h  path.h  pch.h  reg.h  shortcut.h  utils.h
src/res/: app.manifest  resources.rc
tests/: CMakeLists.txt  fixtures.cpp  fixtures.h  main.cpp  pch.h  test_error.cpp  test_path.cpp  test_reg.cpp  test_shortcut.cpp  test_utils.cpp  utils.cpp  utils.h
tests/res/: app.manifest  resources.rc
